admission/ValidatingAdmissionPolicy/policies/hostipc/deny.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostipc-pod
  annotations:
    kubeapt.io/uuid: "29c502b6-a8aa-4cd7-a309-482332dd9a52"
spec:
  containers:
  - name: main
    image: busybox:1.36
    command:
    - sh
    - -c
    - sleep 3600
  hostIPC: true
